package com.krickert.search.model.constants;

public class KafkaProtobufConstants {
    public static final String SPECIFIC_CLASS_PROPERTY = "specific.protobuf.value.type";
    public static final String DOWNLOAD_FILE_REQUEST_CLASS = "com.krickert.search.model.wiki.DownloadFileRequest";
    public static final String DOWNLOADED_FILE_CLASS = "com.krickert.search.model.wiki.DownloadedFile";
    public static final String WIKIARTICLE_CLASS = "com.krickert.search.model.wiki.WikiArticle";
    public static final String PIPE_DOCUMENT_CLASS = "com.krickert.search.model.pipe.PipeDocument";
}
